--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -71,6 +71,7 @@ set(core_SOURCES
         format/BitwardenReader.cpp
         format/CsvExporter.cpp
         format/CsvParser.cpp
+        format/HtmlExporter.cpp
         format/KeePass1Reader.cpp
         format/KeePass2.cpp
         format/KeePass2RandomStream.cpp
@@ -129,7 +130,7 @@ set(gui_SOURCES
         gui/FileDialog.cpp
         gui/Font.cpp
         gui/GuiTools.cpp
-        gui/HtmlExporter.cpp
+        gui/HtmlGuiExporter.cpp
         gui/IconModels.cpp
         gui/KMessageWidget.cpp
         gui/MainWindow.cpp
